<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="io.orly.loginapp.ui.splash_screen.SplashScreenFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">


        <action
            android:id="@+id/action_splash_to_welcome_fragment"
            app:destination="@id/welcome_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/welcome_fragment"
        android:name="io.orly.loginapp.ui.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">

        <action
            android:id="@+id/action_welcome_to_login"
            app:destination="@id/login_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_welcome_to_register"
            app:destination="@id/register_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/login_fragment"
        android:name="io.orly.loginapp.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/register_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/login_fragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_login_to_landing"
            app:destination="@id/landing_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/login_fragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/register_fragment"
        android:name="io.orly.loginapp.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/login_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/register_fragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_register_to_landing"
            app:destination="@id/landing_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/register_fragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/landing_fragment"
        android:name="io.orly.loginapp.ui.main_screen.MainFragment"
        android:label="@string/landing"
        tools:layout="@layout/fragment_main_view">

        <argument
            android:name="user"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="email"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />

        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="-1"/>

    </fragment>
</navigation>